cmake_minimum_required(VERSION 3.20)
project(QSqlCipher)
message(STATUS "Building QSqlCipher plugin for Qt (SqlCipher version 4.6.0 based on SQLite 3.45.3)")
find_package(Qt6 REQUIRED COMPONENTS Core Sql)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
# All source files are copied from official Qt6 qsqlite plugin directory
# smain.cpp and sqlite.json are modified to use QSqlCipherDriverPlugin class instead QSQLiteDriverPlugin
# and QSQLCIPHER plugin key instead QSQLITE
# sqlite3.c is taken from sqlcipher amalgamation
include(CheckFunctionExists)
include(CheckIncludeFile)
check_function_exists(fallocate             HAVE_POSIX_FALLOCATE)
check_function_exists(fchmod                HAVE_FCHMOD)
check_function_exists(fchown                HAVE_FCHOWN)
check_function_exists(gmtime_r              HAVE_GMTIME_R)
check_function_exists(isnan                 HAVE_ISNAN)
check_function_exists(localtime_r           HAVE_LOCALTIME_R)
check_function_exists(localtime_s           HAVE_LOCALTIME_S)
check_function_exists(lstat                 HAVE_LSTAT)
check_function_exists(malloc_usable_size    HAVE_MALLOC_USABLE_SIZE)
check_function_exists(mremap                HAVE_MREMAP)
check_function_exists(pread                 HAVE_PREAD)
check_function_exists(pread64               HAVE_PREAD64)
check_function_exists(pwrite                HAVE_PWRITE)
check_function_exists(pwrite64              HAVE_PWRITE64)
check_function_exists(readlink              HAVE_READLINK)
check_function_exists(strchrnul             HAVE_STRCHRNUL)
check_function_exists(strerror_r            HAVE_STRERROR_R)
check_function_exists(usleep                HAVE_USLEEP)
check_function_exists(utime                 HAVE_UTIME)
check_include_file(inttypes.h               HAVE_INTTYPES_H)
check_include_file(malloc.h                 HAVE_MALLOC_H)
check_include_file(stdint.h                 HAVE_STDINT_H)

qt_add_plugin(QSqlCipherDriverPlugin
    OUTPUT_NAME qsqlcipher
    PLUGIN_TYPE sqldrivers
    SHARED
        qsql_sqlite.cpp
        qsql_sqlite_p.h
        qsql_sqlite_vfs.cpp
        qsql_sqlite_vfs_p.h
        smain.cpp
)
target_compile_definitions(QSqlCipherDriverPlugin
    PRIVATE
        QT_NO_CAST_FROM_ASCII
        QT_NO_CAST_TO_ASCII
        QT_NO_CONTEXTLESS_CONNECT
        QT_NO_FOREACH
        QT_NO_JAVA_STYLE_ITERATORS
        QT_USE_QSTRINGBUILDER
)
target_link_libraries(QSqlCipherDriverPlugin
    PRIVATE
        Qt::Core
        Qt::SqlPrivate
)
# sqlcipher
target_sources(QSqlCipherDriverPlugin
    PRIVATE
        3rdparty/sqlcipher/sqlite3.c
)
target_compile_definitions(QSqlCipherDriverPlugin
    PRIVATE
        SQLCIPHER_CRYPTO_LIBTOMCRYPT
        SQLITE_HAS_CODEC
        SQLITE_ENABLE_COLUMN_METADATA
        SQLITE_ENABLE_FTS3
        SQLITE_ENABLE_FTS3_PARENTHESIS
        SQLITE_ENABLE_FTS4
        SQLITE_ENABLE_FTS5
        SQLITE_ENABLE_GEOPOLY
        SQLITE_ENABLE_JSON1
        SQLITE_ENABLE_MATH_FUNCTIONS
        SQLITE_ENABLE_RTREE
        SQLITE_OMIT_COMPLETE
        $<$<BOOL:HAVE_POSIX_FALLOCATE>:HAVE_POSIX_FALLOCATE>
        $<$<BOOL:HAVE_FCHMOD>:HAVE_FCHMOD>
        $<$<BOOL:HAVE_FCHOWN>:HAVE_FCHOWN>
        $<$<BOOL:HAVE_GMTIME_R>:HAVE_GMTIME_R>
        $<$<BOOL:HAVE_ISNAN>:HAVE_ISNAN>
        $<$<BOOL:HAVE_LOCALTIME_R>:HAVE_LOCALTIME_R>
        $<$<BOOL:HAVE_LOCALTIME_S>:HAVE_LOCALTIME_S>
        $<$<BOOL:HAVE_LSTAT>:HAVE_LSTAT>
        $<$<BOOL:HAVE_MALLOC_USABLE_SIZE>:HAVE_MALLOC_USABLE_SIZE>
        $<$<BOOL:HAVE_MREMAP>:HAVE_MREMAP>
        $<$<BOOL:HAVE_PREAD>:HAVE_PREAD>
        $<$<BOOL:HAVE_PREAD64>:HAVE_PREAD64>
        $<$<BOOL:HAVE_PWRITE>:HAVE_PWRITE>
        $<$<BOOL:HAVE_PWRITE64>:HAVE_PWRITE64>
        $<$<BOOL:HAVE_READLINK>:HAVE_READLINK>
        $<$<BOOL:HAVE_STRCHRNUL>:HAVE_STRCHRNUL>
        $<$<BOOL:HAVE_STRERROR_R>:HAVE_STRERROR_R>
        $<$<BOOL:HAVE_USLEEP>:HAVE_USLEEP>
        $<$<BOOL:HAVE_UTIME>:HAVE_UTIME>
        $<$<BOOL:HAVE_INTTYPES_H>:HAVE_INTTYPES_H>
        $<$<BOOL:HAVE_MALLOC_H>:HAVE_MALLOC_H>
        $<$<BOOL:HAVE_STDINT_H>:HAVE_STDINT_H>
        $<$<CONFIG:Release>:NDEBUG>
)
target_include_directories(QSqlCipherDriverPlugin
    PRIVATE
        3rdparty/sqlcipher
)
# libtomcrypt
target_sources(QSqlCipherDriverPlugin
    PRIVATE
        3rdparty/libtomcrypt/src/ciphers/aes/aes.c
        3rdparty/libtomcrypt/src/ciphers/aes/aes_tab.c
        3rdparty/libtomcrypt/src/ciphers/anubis.c
        3rdparty/libtomcrypt/src/ciphers/blowfish.c
        3rdparty/libtomcrypt/src/ciphers/camellia.c
        3rdparty/libtomcrypt/src/ciphers/cast5.c
        3rdparty/libtomcrypt/src/ciphers/des.c
        3rdparty/libtomcrypt/src/ciphers/kasumi.c
        3rdparty/libtomcrypt/src/ciphers/khazad.c
        3rdparty/libtomcrypt/src/ciphers/kseed.c
        3rdparty/libtomcrypt/src/ciphers/multi2.c
        3rdparty/libtomcrypt/src/ciphers/noekeon.c
        3rdparty/libtomcrypt/src/ciphers/rc2.c
        3rdparty/libtomcrypt/src/ciphers/rc5.c
        3rdparty/libtomcrypt/src/ciphers/rc6.c
        3rdparty/libtomcrypt/src/ciphers/safer/safer.c
        3rdparty/libtomcrypt/src/ciphers/safer/saferp.c
        3rdparty/libtomcrypt/src/ciphers/safer/safer_tab.c
        3rdparty/libtomcrypt/src/ciphers/skipjack.c
        3rdparty/libtomcrypt/src/ciphers/twofish/twofish.c
        3rdparty/libtomcrypt/src/ciphers/twofish/twofish_tab.c
        3rdparty/libtomcrypt/src/ciphers/xtea.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_add_aad.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_add_nonce.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_done.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_init.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_memory.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_process.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_reset.c
        3rdparty/libtomcrypt/src/encauth/ccm/ccm_test.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_add_aad.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_decrypt.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_done.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_encrypt.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_init.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_memory.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_setiv.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_setiv_rfc7905.c
        3rdparty/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_test.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_addheader.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_decrypt.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_decrypt_verify_memory.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_done.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_encrypt_authenticate_memory.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_encrypt.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_init.c
        3rdparty/libtomcrypt/src/encauth/eax/eax_test.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_add_aad.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_add_iv.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_done.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_gf_mult.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_init.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_memory.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_mult_h.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_process.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_reset.c
        3rdparty/libtomcrypt/src/encauth/gcm/gcm_test.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_add_aad.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_decrypt.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_decrypt_last.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_decrypt_verify_memory.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_done.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_encrypt_authenticate_memory.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_encrypt.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_encrypt_last.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_init.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_int_ntz.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_int_xor_blocks.c
        3rdparty/libtomcrypt/src/encauth/ocb3/ocb3_test.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_decrypt.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_decrypt_verify_memory.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_done_decrypt.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_done_encrypt.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_encrypt_authenticate_memory.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_encrypt.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_init.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_ntz.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_shift_xor.c
        3rdparty/libtomcrypt/src/encauth/ocb/ocb_test.c
        3rdparty/libtomcrypt/src/encauth/ocb/s_ocb_done.c
        3rdparty/libtomcrypt/src/hashes/blake2b.c
        3rdparty/libtomcrypt/src/hashes/blake2s.c
        3rdparty/libtomcrypt/src/hashes/chc/chc.c
        3rdparty/libtomcrypt/src/hashes/helper/hash_file.c
        3rdparty/libtomcrypt/src/hashes/helper/hash_filehandle.c
        3rdparty/libtomcrypt/src/hashes/helper/hash_memory.c
        3rdparty/libtomcrypt/src/hashes/helper/hash_memory_multi.c
        3rdparty/libtomcrypt/src/hashes/md2.c
        3rdparty/libtomcrypt/src/hashes/md4.c
        3rdparty/libtomcrypt/src/hashes/md5.c
        3rdparty/libtomcrypt/src/hashes/rmd128.c
        3rdparty/libtomcrypt/src/hashes/rmd160.c
        3rdparty/libtomcrypt/src/hashes/rmd256.c
        3rdparty/libtomcrypt/src/hashes/rmd320.c
        3rdparty/libtomcrypt/src/hashes/sha1.c
        3rdparty/libtomcrypt/src/hashes/sha2/sha224.c
        3rdparty/libtomcrypt/src/hashes/sha2/sha256.c
        3rdparty/libtomcrypt/src/hashes/sha2/sha384.c
        3rdparty/libtomcrypt/src/hashes/sha2/sha512_224.c
        3rdparty/libtomcrypt/src/hashes/sha2/sha512_256.c
        3rdparty/libtomcrypt/src/hashes/sha2/sha512.c
        3rdparty/libtomcrypt/src/hashes/sha3.c
        3rdparty/libtomcrypt/src/hashes/sha3_test.c
        3rdparty/libtomcrypt/src/hashes/tiger.c
        3rdparty/libtomcrypt/src/hashes/whirl/whirl.c
        3rdparty/libtomcrypt/src/hashes/whirl/whirltab.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2bmac.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2bmac_file.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2bmac_memory.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2bmac_memory_multi.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2bmac_test.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2smac.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2smac_file.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2smac_memory.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2smac_memory_multi.c
        3rdparty/libtomcrypt/src/mac/blake2/blake2smac_test.c
        3rdparty/libtomcrypt/src/mac/f9/f9_done.c
        3rdparty/libtomcrypt/src/mac/f9/f9_file.c
        3rdparty/libtomcrypt/src/mac/f9/f9_init.c
        3rdparty/libtomcrypt/src/mac/f9/f9_memory.c
        3rdparty/libtomcrypt/src/mac/f9/f9_memory_multi.c
        3rdparty/libtomcrypt/src/mac/f9/f9_process.c
        3rdparty/libtomcrypt/src/mac/f9/f9_test.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_done.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_file.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_init.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_memory.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_memory_multi.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_process.c
        3rdparty/libtomcrypt/src/mac/hmac/hmac_test.c
        3rdparty/libtomcrypt/src/mac/omac/omac_done.c
        3rdparty/libtomcrypt/src/mac/omac/omac_file.c
        3rdparty/libtomcrypt/src/mac/omac/omac_init.c
        3rdparty/libtomcrypt/src/mac/omac/omac_memory.c
        3rdparty/libtomcrypt/src/mac/omac/omac_memory_multi.c
        3rdparty/libtomcrypt/src/mac/omac/omac_process.c
        3rdparty/libtomcrypt/src/mac/omac/omac_test.c
        3rdparty/libtomcrypt/src/mac/pelican/pelican.c
        3rdparty/libtomcrypt/src/mac/pelican/pelican_memory.c
        3rdparty/libtomcrypt/src/mac/pelican/pelican_test.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_done.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_file.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_init.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_memory.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_memory_multi.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_ntz.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_process.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_shift_xor.c
        3rdparty/libtomcrypt/src/mac/pmac/pmac_test.c
        3rdparty/libtomcrypt/src/mac/poly1305/poly1305.c
        3rdparty/libtomcrypt/src/mac/poly1305/poly1305_file.c
        3rdparty/libtomcrypt/src/mac/poly1305/poly1305_memory.c
        3rdparty/libtomcrypt/src/mac/poly1305/poly1305_memory_multi.c
        3rdparty/libtomcrypt/src/mac/poly1305/poly1305_test.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_done.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_file.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_init.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_memory.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_memory_multi.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_process.c
        3rdparty/libtomcrypt/src/mac/xcbc/xcbc_test.c
        3rdparty/libtomcrypt/src/math/fp/ltc_ecc_fp_mulmod.c
        3rdparty/libtomcrypt/src/math/gmp_desc.c
        3rdparty/libtomcrypt/src/math/ltm_desc.c
        3rdparty/libtomcrypt/src/math/multi.c
        3rdparty/libtomcrypt/src/math/radix_to_bin.c
        3rdparty/libtomcrypt/src/math/rand_bn.c
        3rdparty/libtomcrypt/src/math/rand_prime.c
        3rdparty/libtomcrypt/src/math/tfm_desc.c
        3rdparty/libtomcrypt/src/misc/adler32.c
        3rdparty/libtomcrypt/src/misc/base64/base64_decode.c
        3rdparty/libtomcrypt/src/misc/base64/base64_encode.c
        3rdparty/libtomcrypt/src/misc/burn_stack.c
        3rdparty/libtomcrypt/src/misc/compare_testvector.c
        3rdparty/libtomcrypt/src/misc/crc32.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_argchk.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_cipher_descriptor.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_cipher_is_valid.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_constants.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_cipher_any.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_cipher.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_cipher_id.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_hash_any.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_hash.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_hash_id.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_hash_oid.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_find_prng.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_fsa.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_hash_descriptor.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_hash_is_valid.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_inits.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_ltc_mp_descriptor.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_prng_descriptor.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_prng_is_valid.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_prng_rng_descriptor.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_register_all_ciphers.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_register_all_hashes.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_register_all_prngs.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_register_cipher.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_register_hash.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_register_prng.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_sizes.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_unregister_cipher.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_unregister_hash.c
        3rdparty/libtomcrypt/src/misc/crypt/crypt_unregister_prng.c
        3rdparty/libtomcrypt/src/misc/error_to_string.c
        3rdparty/libtomcrypt/src/misc/hkdf/hkdf.c
        3rdparty/libtomcrypt/src/misc/hkdf/hkdf_test.c
        3rdparty/libtomcrypt/src/misc/mem_neq.c
        3rdparty/libtomcrypt/src/misc/pkcs5/pkcs_5_1.c
        3rdparty/libtomcrypt/src/misc/pkcs5/pkcs_5_2.c
        3rdparty/libtomcrypt/src/misc/pkcs5/pkcs_5_test.c
        3rdparty/libtomcrypt/src/misc/pk_get_oid.c
        3rdparty/libtomcrypt/src/misc/zeromem.c
        3rdparty/libtomcrypt/src/modes/cbc/cbc_decrypt.c
        3rdparty/libtomcrypt/src/modes/cbc/cbc_done.c
        3rdparty/libtomcrypt/src/modes/cbc/cbc_encrypt.c
        3rdparty/libtomcrypt/src/modes/cbc/cbc_getiv.c
        3rdparty/libtomcrypt/src/modes/cbc/cbc_setiv.c
        3rdparty/libtomcrypt/src/modes/cbc/cbc_start.c
        3rdparty/libtomcrypt/src/modes/cfb/cfb_decrypt.c
        3rdparty/libtomcrypt/src/modes/cfb/cfb_done.c
        3rdparty/libtomcrypt/src/modes/cfb/cfb_encrypt.c
        3rdparty/libtomcrypt/src/modes/cfb/cfb_getiv.c
        3rdparty/libtomcrypt/src/modes/cfb/cfb_setiv.c
        3rdparty/libtomcrypt/src/modes/cfb/cfb_start.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_decrypt.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_done.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_encrypt.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_getiv.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_setiv.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_start.c
        3rdparty/libtomcrypt/src/modes/ctr/ctr_test.c
        3rdparty/libtomcrypt/src/modes/ecb/ecb_decrypt.c
        3rdparty/libtomcrypt/src/modes/ecb/ecb_done.c
        3rdparty/libtomcrypt/src/modes/ecb/ecb_encrypt.c
        3rdparty/libtomcrypt/src/modes/ecb/ecb_start.c
        3rdparty/libtomcrypt/src/modes/f8/f8_decrypt.c
        3rdparty/libtomcrypt/src/modes/f8/f8_done.c
        3rdparty/libtomcrypt/src/modes/f8/f8_encrypt.c
        3rdparty/libtomcrypt/src/modes/f8/f8_getiv.c
        3rdparty/libtomcrypt/src/modes/f8/f8_setiv.c
        3rdparty/libtomcrypt/src/modes/f8/f8_start.c
        3rdparty/libtomcrypt/src/modes/f8/f8_test_mode.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_decrypt.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_done.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_encrypt.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_getiv.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_process.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_setiv.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_start.c
        3rdparty/libtomcrypt/src/modes/lrw/lrw_test.c
        3rdparty/libtomcrypt/src/modes/ofb/ofb_decrypt.c
        3rdparty/libtomcrypt/src/modes/ofb/ofb_done.c
        3rdparty/libtomcrypt/src/modes/ofb/ofb_encrypt.c
        3rdparty/libtomcrypt/src/modes/ofb/ofb_getiv.c
        3rdparty/libtomcrypt/src/modes/ofb/ofb_setiv.c
        3rdparty/libtomcrypt/src/modes/ofb/ofb_start.c
        3rdparty/libtomcrypt/src/modes/xts/xts_decrypt.c
        3rdparty/libtomcrypt/src/modes/xts/xts_done.c
        3rdparty/libtomcrypt/src/modes/xts/xts_encrypt.c
        3rdparty/libtomcrypt/src/modes/xts/xts_init.c
        3rdparty/libtomcrypt/src/modes/xts/xts_mult_x.c
        3rdparty/libtomcrypt/src/modes/xts/xts_test.c
        3rdparty/libtomcrypt/src/pk/asn1/der/bit/der_decode_bit_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/bit/der_decode_raw_bit_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/bit/der_encode_bit_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/bit/der_encode_raw_bit_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/bit/der_length_bit_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/boolean/der_decode_boolean.c
        3rdparty/libtomcrypt/src/pk/asn1/der/boolean/der_encode_boolean.c
        3rdparty/libtomcrypt/src/pk/asn1/der/boolean/der_length_boolean.c
        3rdparty/libtomcrypt/src/pk/asn1/der/choice/der_decode_choice.c
        3rdparty/libtomcrypt/src/pk/asn1/der/generalizedtime/der_decode_generalizedtime.c
        3rdparty/libtomcrypt/src/pk/asn1/der/generalizedtime/der_encode_generalizedtime.c
        3rdparty/libtomcrypt/src/pk/asn1/der/generalizedtime/der_length_generalizedtime.c
        3rdparty/libtomcrypt/src/pk/asn1/der/ia5/der_decode_ia5_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/ia5/der_encode_ia5_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/ia5/der_length_ia5_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/integer/der_decode_integer.c
        3rdparty/libtomcrypt/src/pk/asn1/der/integer/der_encode_integer.c
        3rdparty/libtomcrypt/src/pk/asn1/der/integer/der_length_integer.c
        3rdparty/libtomcrypt/src/pk/asn1/der/object_identifier/der_decode_object_identifier.c
        3rdparty/libtomcrypt/src/pk/asn1/der/object_identifier/der_encode_object_identifier.c
        3rdparty/libtomcrypt/src/pk/asn1/der/object_identifier/der_length_object_identifier.c
        3rdparty/libtomcrypt/src/pk/asn1/der/octet/der_decode_octet_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/octet/der_encode_octet_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/octet/der_length_octet_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/printable_string/der_decode_printable_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/printable_string/der_encode_printable_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/printable_string/der_length_printable_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_decode_sequence_ex.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_decode_sequence_flexi.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_decode_sequence_multi.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_decode_subject_public_key_info.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_encode_sequence_ex.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_encode_sequence_multi.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_encode_subject_public_key_info.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_length_sequence.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_sequence_free.c
        3rdparty/libtomcrypt/src/pk/asn1/der/sequence/der_sequence_shrink.c
        3rdparty/libtomcrypt/src/pk/asn1/der/set/der_encode_set.c
        3rdparty/libtomcrypt/src/pk/asn1/der/set/der_encode_setof.c
        3rdparty/libtomcrypt/src/pk/asn1/der/short_integer/der_decode_short_integer.c
        3rdparty/libtomcrypt/src/pk/asn1/der/short_integer/der_encode_short_integer.c
        3rdparty/libtomcrypt/src/pk/asn1/der/short_integer/der_length_short_integer.c
        3rdparty/libtomcrypt/src/pk/asn1/der/teletex_string/der_decode_teletex_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/teletex_string/der_length_teletex_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/utctime/der_decode_utctime.c
        3rdparty/libtomcrypt/src/pk/asn1/der/utctime/der_encode_utctime.c
        3rdparty/libtomcrypt/src/pk/asn1/der/utctime/der_length_utctime.c
        3rdparty/libtomcrypt/src/pk/asn1/der/utf8/der_decode_utf8_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/utf8/der_encode_utf8_string.c
        3rdparty/libtomcrypt/src/pk/asn1/der/utf8/der_length_utf8_string.c
        3rdparty/libtomcrypt/src/pk/dh/dh.c
        3rdparty/libtomcrypt/src/pk/dh/dh_check_pubkey.c
        3rdparty/libtomcrypt/src/pk/dh/dh_export.c
        3rdparty/libtomcrypt/src/pk/dh/dh_export_key.c
        3rdparty/libtomcrypt/src/pk/dh/dh_free.c
        3rdparty/libtomcrypt/src/pk/dh/dh_generate_key.c
        3rdparty/libtomcrypt/src/pk/dh/dh_import.c
        3rdparty/libtomcrypt/src/pk/dh/dh_set.c
        3rdparty/libtomcrypt/src/pk/dh/dh_set_pg_dhparam.c
        3rdparty/libtomcrypt/src/pk/dh/dh_shared_secret.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_decrypt_key.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_encrypt_key.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_export.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_free.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_generate_key.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_generate_pqg.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_import.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_make_key.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_set.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_set_pqg_dsaparam.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_shared_secret.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_sign_hash.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_verify_hash.c
        3rdparty/libtomcrypt/src/pk/dsa/dsa_verify_key.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_ansi_x963_export.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_ansi_x963_import.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_decrypt_key.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_encrypt_key.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_export.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_free.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_get_size.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_import.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_make_key.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_shared_secret.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_sign_hash.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_sizes.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_test.c
        3rdparty/libtomcrypt/src/pk/ecc/ecc_verify_hash.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_is_valid_idx.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_map.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_mul2add.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_mulmod.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_mulmod_timing.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_points.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_projective_add_point.c
        3rdparty/libtomcrypt/src/pk/ecc/ltc_ecc_projective_dbl_point.c
        3rdparty/libtomcrypt/src/pk/katja/katja_decrypt_key.c
        3rdparty/libtomcrypt/src/pk/katja/katja_encrypt_key.c
        3rdparty/libtomcrypt/src/pk/katja/katja_export.c
        3rdparty/libtomcrypt/src/pk/katja/katja_exptmod.c
        3rdparty/libtomcrypt/src/pk/katja/katja_free.c
        3rdparty/libtomcrypt/src/pk/katja/katja_import.c
        3rdparty/libtomcrypt/src/pk/katja/katja_make_key.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_i2osp.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_mgf1.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_oaep_decode.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_oaep_encode.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_os2ip.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_pss_decode.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_pss_encode.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_v1_5_decode.c
        3rdparty/libtomcrypt/src/pk/pkcs1/pkcs_1_v1_5_encode.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_decrypt_key.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_encrypt_key.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_export.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_exptmod.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_free.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_get_size.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_import.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_import_pkcs8.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_import_x509.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_make_key.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_set.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_sign_hash.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_sign_saltlen_get.c
        3rdparty/libtomcrypt/src/pk/rsa/rsa_verify_hash.c
        3rdparty/libtomcrypt/src/prngs/chacha20.c
        3rdparty/libtomcrypt/src/prngs/fortuna.c
        3rdparty/libtomcrypt/src/prngs/rc4.c
        3rdparty/libtomcrypt/src/prngs/rng_get_bytes.c
        3rdparty/libtomcrypt/src/prngs/rng_make_prng.c
        3rdparty/libtomcrypt/src/prngs/sober128.c
        3rdparty/libtomcrypt/src/prngs/sprng.c
        3rdparty/libtomcrypt/src/prngs/yarrow.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_crypt.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_done.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_ivctr32.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_ivctr64.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_keystream.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_setup.c
        3rdparty/libtomcrypt/src/stream/chacha/chacha_test.c
        3rdparty/libtomcrypt/src/stream/rc4/rc4_stream.c
        3rdparty/libtomcrypt/src/stream/rc4/rc4_test.c
        3rdparty/libtomcrypt/src/stream/sober128/sober128_stream.c
        3rdparty/libtomcrypt/src/stream/sober128/sober128tab.c
        3rdparty/libtomcrypt/src/stream/sober128/sober128_test.c
)
target_compile_definitions(QSqlCipherDriverPlugin
    PRIVATE
        #LTM_DESC   # this would include libtommath
        LTC_NO_TEST
        LTC_NO_PROTOTYPES
        LTC_SOURCE
)
target_include_directories(QSqlCipherDriverPlugin
    PRIVATE
        3rdparty/libtomcrypt/src/headers
)
